--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^2.3.0",
+    "@gorhom/portal": "^1.0.4",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/drawer": "^5.12.5",
@@ -15,14 +18,28 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.0",
     "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
+    "firebase": "8.2.3",
+    "moment": "^2.29.1",
+    "react": "17.0.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-elements": "^3.4.1",
+    "react-native-face-pile": "^1.9.0",
+    "react-native-gantt-chart": "^1.0.6",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-interactable-reanimated": "0.0.15",
+    "react-native-modal-datetime-picker": "^9.2.3",
+    "react-native-paper": "^4.8.1",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-swiper": "next",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
