--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "moment": "^2.29.1",
+    "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -38,7 +39,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-swiper": "next",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.16.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
