--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gorhom/portal": "^1.0.4",
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
@@ -24,13 +25,17 @@
     "react": "17.0.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-dropdown-picker": "^5.1.23",
     "react-native-elements": "^3.4.1",
     "react-native-face-pile": "^1.9.0",
     "react-native-gantt-chart": "^1.0.6",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-interactable-reanimated": "0.0.15",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^9.2.3",
     "react-native-paper": "^4.8.1",
+    "react-native-paper-dropdown": "^1.0.3",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
