--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^2.3.0",
-    "@gorhom/portal": "^1.0.4",
+    "@gorhom/portal": "^1.0.11",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "1.9.11",
@@ -23,8 +24,9 @@
     "moment": "^2.29.1",
     "native-base": "^2.15.2",
     "react": "17.0.1",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-elements": "^3.4.1",
     "react-native-face-pile": "^1.9.0",
@@ -37,7 +39,7 @@
     "react-native-paper-dropdown": "^1.0.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
